# stm32-cmake

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
cmake/: FindCMSIS.cmake  FindHAL.cmake  FindSTM32Cube.cmake  stm32.cmake
cmake/stm32/: families.cmake  series.cmake
cmake/stm32/toolchain/: gcc.cmake
sources/: main.cpp
stm32-cmake/: FindCMSIS.cmake  FindHAL.cmake  FindSTM32Cube.cmake  stm32_cmake.cmake
stm32-cmake/stm32/: device.cmake  hal.cmake  linker.cmake  series.cmake  utils.cmake
stm32-cmake/stm32/family/: F7.cmake
stm32-cmake/stm32/series/: F7.cmake  template.cmake
